Fixed notification alignment. Fixes #28

--- a/app/assets/stylesheets/cpp.css.scss
+++ b/app/assets/stylesheets/cpp.css.scss
@@ -29,6 +29,16 @@ h1 {
   @include box-shadow(0 1px 2px rgba(0, 0, 0, .075));
 }
 
+/* Notifications */
+.centre-span{
+  margin:0 auto;
+  float:none;
+}
+
+.centre-text{
+  text-align:center;
+}
+
 /* Event/Placement Lists */
 .opportunity-list{
   list-style: none;
